Cleanup, remove warnings, refactoring